<resources>
    <string name="app_name">STUDENT </string>
    <string name="button">Button</string>
    <string name="username">UserName</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lecture">Lecture</string>
    <string name="student">Student</string>
    <string name="course">Course</string>
    <string name="right">Right</string>
    <string name="songs">Songs</string>
    <string name="title_activity_admin_panel_student">Student</string>

    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_admin_panel_lecture">AdminPanelLectureActivity</string>
    <string name="title_activity_admin_panel_course">AdminPanelCourseActivity</string>

</resources>
