<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMain">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/todo"

        app:srcCompat="@drawable/uoj_logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:fontFamily="serif-monospace"
        android:drawableStart="@drawable/ic_action_user" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="197dp"
        android:drawableLeft="@drawable/ic_action_passw"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:fontFamily="serif-monospace" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview"
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:contentDescription="@android:string/autofill"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="serif-monospace" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>